--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'colors' as *;
+
+* {
+    margin: 0;
+    padding: 0;
+    color: $dark-gray;
+    font-family: Arial, Helvetica, sans-serif;
+}
