chore: home page inputs

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 <main>    
-    <h1>Nome do Restaurante</h1>
+    <h1>Restaurant</h1>
     
     <form>
         <input type="text" placeholder="Seu Nome" name="customer-name">
         <input type="text" placeholder="Sua Mesa (ex: 12)" name="customer-table">
-        <input type="submit" value="Ir para o menu" class="submit-btn" (click)="sendForm()">
+        <button (click)="sendForm()">Ir para o menu</button>
     </form>
 </main>
