--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -29,7 +29,7 @@ main {
 
             &:focus {
                 outline: none;
-                border: solid 1px red;
+                border: solid 1px $yellow-mustard
             }
 
             &::placeholder {
