feat: formbuilde home form

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 <main>    
     <h1>Restaurant</h1>
     
-    <form>
-        <input type="text" placeholder="Seu Nome" name="customer-name">
-        <input type="text" placeholder="Sua Mesa (ex: 12)" name="customer-table">
-        <button (click)="sendForm()">Ir para o menu</button>
+    <form [formGroup]="formGroup" (ngSubmit)="sendForm()">
+        <input type="text"  placeholder="Seu Nome" formControlName="name">
+        <input type="text" placeholder="Sua Mesa (ex: 12)" formControlName="table">
+        <button type="submit">Ir para o menu</button>
     </form>
 </main>
