--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>    
     <h1>Restaurant</h1>
     
-    <form [formGroup]="formGroup" (ngSubmit)="sendForm()">
+    <form [formGroup]="formGroup" (ngSubmit)="submitForm()">
         <input type="text"  placeholder="Seu Nome" formControlName="name">
         <input type="text" placeholder="Sua Mesa (ex: 12)" formControlName="table">
         <button type="submit">Ir para o menu</button>
