chore: routes configuration

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,3 @@
 <main>    
-    <h1>Restaurant</h1>
-    
-    <form [formGroup]="formGroup" (ngSubmit)="submitForm()">
-        <input type="text"  placeholder="Seu Nome" formControlName="name">
-        <input type="text" placeholder="Sua Mesa (ex: 12)" formControlName="table">
-        <button type="submit">Ir para o menu</button>
-    </form>
+    <router-outlet></router-outlet>
 </main>
