chore: colors.scss

--- a/frontend/src/assets/styles/colors.scss
+++ b/frontend/src/assets/styles/colors.scss
@@ -1,6 +1,6 @@
 $background: #DFDFDF;
 $yellow-mustard: #CBA51D;
 $dark-gray: #616161;
-$light-gray: #929292;
+$light-gray: #B1B1B18E;
 $green-okay: #489347;
 $red-error: #8b1511;
