feat: put cards in menu

--- a/frontend/src/app/components/menu/menu.component.html
+++ b/frontend/src/app/components/menu/menu.component.html
@@ -7,4 +7,10 @@
             <h2><i class="fa-solid fa-cart-shopping"></i></h2>
         </div>
     </header>
+
+    <div class="cards-container">
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+    </div>
 </div>
